--- a/app/assets/stylesheets/menus.scss
+++ b/app/assets/stylesheets/menus.scss
@@ -6,13 +6,13 @@
   background-color: #fff;
 }
 
-.menu__top--title{ //text
+.menu__top--title{
   border-bottom: 1px solid #dcdcdc;
   margin-bottom: 50px;
   animation: SlideIn 4.8s;
 }
 
-.menu__body--box{ //recipe-box
+.menu__body--box{
   margin: 20px;
   transition-duration: 0.5s;
 }
@@ -27,7 +27,7 @@
   transition-duration: 0.5s;
 }
 
-.menu__body--title{ //recipe-title
+.menu__body--title{
   border-bottom: 1px solid #dcdcdc;
   margin-bottom: 50px;
   color: #6c6c6c;
