--- a/app/assets/stylesheets/relationships.scss
+++ b/app/assets/stylesheets/relationships.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.relationships__top--content{ //text
+.relationships__top--content{
   border-bottom: 1px solid #dcdcdc;
   margin-bottom: 50px;
   animation: SlideIn 4.8s;
