--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -5,7 +5,7 @@
         <%= image_tag "oriento-dPUWgZLsOk8-unsplash.jpg", id: "about__top--img" %>
         <div class="card-img-overlay">
           <h1 class="about__top--title">献立作りが楽しくなる</h1>
-          <p class="card-text">
+          <p>
             サイトを作ったのは、</br>
             母が「毎日違った献立を立てるのは面倒臭い」</br>
             「何を作ったのか覚えてなくて、</br>
@@ -15,8 +15,7 @@
             同じ悩みを抱える方達の役に立ち、多くの人に利用して頂けると</br>
             思いこのサイトを制作しました。</br>
             利用者様の使い勝手がいいように、親しみやすく</br>
-            すっきりとした見た目のサイトになっております。</br>
-            このサイトを使う内に献立を立てるのが楽しくなるはずです。
+            すっきりとした見た目のサイトになっております。
           </p>
         </div>
       </div>
