--- a/app/assets/stylesheets/foods.scss
+++ b/app/assets/stylesheets/foods.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.food__top--title{ //text
+.food__top--title{
   border-bottom: 1px solid #dcdcdc;
   margin-bottom: 50px;
   animation: SlideIn 4.8s;
