--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -90,7 +90,7 @@
   transition-duration: 0.5s;
 }
 
-#recipe__body--img:hover{ //link
+#recipe__body--img:hover{
   font-size: 30px;
 }
 
@@ -99,29 +99,6 @@
   border-bottom: 1px solid #dcdcdc;
   color: #6c6c6c;
   width: 400px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-#img-top-rank{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.2;
-}
-
-#image-link-rank {
-	overflow:		hidden;
 }
 
 .tab-list {
@@ -160,49 +137,6 @@
   display: block;
 }
 
-.rank_name{
-  font-size: 20px;
-  font-family: "ヒラギノ角ゴシック";
-}
-
-.card-title-top{
-  animation: SlideIn 4.8s;
-}
-
-.card-title-rank{
-  color: #000;
-}
-
-@keyframes SlideIn {
-  0% {
-    opacity: 0;/*初期状態では透明に*/
-    transform: translateX(64px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-.info{
-  font-family: "ヒラギノ角ゴシック";
-  opacity: 0.7;
-  background-color:rgba(255,215,0,0.5);
-}
-
 .recipe__body--count{
   margin: 0 0 0 10px;
-}
-
-
-
-
-
-
-
-
-
-
-.user-name{
-  margin-left: 20px;
 }
