--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -5,7 +5,7 @@
         <%= image_tag "oriento-dPUWgZLsOk8-unsplash.jpg", id: "about__top--img" %>
         <div class="card-img-overlay">
           <h1 class="about__top--title">献立作りが楽しくなる</h1>
-          <p>
+          <p class ="about__top--content">
             サイトを作ったのは、</br>
             母が「毎日違った献立を立てるのは面倒臭い」</br>
             「何を作ったのか覚えてなくて、</br>
