--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <h1 class ="user__top--title"><%= @user.name %>さん の会員詳細</h1>
   <div class='row'>
     <div class="col-5 offset-2 mx-auto">
-      <% if @user == current_user %>
+      <% if @user == current_user || current_user.admin? %>
         <%= link_to "編集する", edit_user_path(@user), class: "btn application__generic--btn" %>
       <% end %>
       <table class= "table">
