--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,11 @@
                 <% end %>
               </li>
               <li class="nav-item">
+                <%= link_to new_recipe_path, class: 'nav-link text-dark' do %>
+                  <span class="text-dark">レシピ作成<i class="fas fa-signature"></i></span>
+                <% end %>
+              </li>
+              <li class="nav-item">
                 <%= link_to user_menus_path(current_user.id), class: 'nav-link text-dark' do %>
                   <span class="text-dark">献立予定 <i class="fas fa-calendar"></i></span>
                 <% end %>
